--- a/index.html
+++ b/index.html
@@ -3,16 +3,21 @@
 
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-  <title>Untitled Document</title>
-  <link href="style/style.css" rel="stylesheet" type="text/css" />
+  <meta content="width=device-width, initial-scale=1" name="viewport" />
+
+  <title>Channel Group International</title>
+  <link href="style/main.css" rel="stylesheet" type="text/css" />
+  <link href="style/index.css" rel="stylesheet" type="text/css" />
+
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
 </head>
 
 <body>
   <main id="index">
 
-    <div class="site-container">
+    <div class="site-container" style="display:none;" id="page_effect">
       <div class="site-pusher">
+        <!--   <div data-include="nav"></div> -->
 
         <nav class="nav">
           <a href="" class="nav-icon" id="nav-icon"></a>
@@ -38,7 +43,9 @@
               <div class="text">BENYODI NDENG</div>
               <div class="line"></div>
             </div>
-
+            <div class="nav-languages mobile">
+              <a>FR</a><a>EN</a>
+            </div>
           </div>
 
           <div class="nav-languages desktop">
@@ -54,11 +61,12 @@
 
         </nav>
 
-        <video class="index-video" autoplay autoplay="autoplay" controls>
-         <source src="img/Video Of People Walking.mp4" type="video/mp4">
-         <source src="img/Video Of People Walking.mp4" type="video/webm">
-           No sorry
-      </video>
+
+
+        <div class="index-header">
+          <div class="index-header-warp">
+          </div>
+        </div>
 
         <div class="container">
           <div class="index-quisommesnous">
@@ -69,11 +77,12 @@
           </div>
         </div>
 
+        <!--           <div data-include="footer"></div>-->
+
         <footer class="footer">
           <div class="footer-sections">
-            <div class="agency">
+            <div class="agency desktop">
               <h3>NOS AGENCES</h3>
-              <div class="flex-mobile">
               <p class=" agency-address">60 Kingly Street<br/>
           W1B 5DS London<br/>
           TEL+44 20 7734 1677</p>
@@ -83,7 +92,6 @@
                   <p class=" agency-address">60 Kingly Street<br/>
           W1B 5DS London<br/>
           TEL+44 20 7734 1677</p>
-        </div>
             </div>
             <div class="contact">
               <h3> NOUS CONTACTER</h3>
@@ -109,9 +117,21 @@
 
                     <div class="contact-submit">
                       <input type="submit" class="btn btn-footer" value="ENVOYER">
-                      <p class="text">Tous les champs sont obligatoirs</p>
+                      <p class="text  desktop">Tous les champs sont obligatoirs</p>
                     </div>
               </form>
+            </div>
+            <div class="agency mobile">
+              <h3>NOS AGENCES</h3>
+              <p class=" agency-address">60 Kingly Street<br/>
+          W1B 5DS London<br/>
+          TEL+44 20 7734 1677</p>
+                <p class=" agency-address">60 Kingly Street<br/>
+          W1B 5DS London<br/>
+          TEL+44 20 7734 1677</p>
+                  <p class=" agency-address">60 Kingly Street<br/>
+          W1B 5DS London<br/>
+          TEL+44 20 7734 1677</p>
             </div>
             <div class="social">
               <h3>RÉSEAUX SOCIAUX</h3>
