--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
               <div class="line"></div>
             </div>
             <div class="nav-languages mobile">
-              <a>FR</a><a>EN</a>
+              <a>ENGLISH</a>
             </div>
           </div>
 
           <div class="nav-languages desktop">
-            <a>FR</a><a>EN</a>
+            <a>ENGLISH</a>
           </div>
 
 
