--- a/travel.html
+++ b/travel.html
@@ -43,12 +43,12 @@
               <div class="line"></div>
             </div>
             <div class="nav-languages mobile">
-              <a>FR</a><a>EN</a>
+              <a>ENGLISH</a>
             </div>
           </div>
 
           <div class="nav-languages desktop">
-            <a>FR</a><a>EN</a>
+            <a>ENGLISH</a>
           </div>
           <a href="#" class="nav-logo mobile">
             <object type="image/svg+xml" data="img/logo/logo.svg">Your browser does not support SVG</object>
