--- a/advertising.html
+++ b/advertising.html
@@ -24,7 +24,7 @@
 </head>
 
 <body>
-  <main id="travel">
+  <main id="advertising">
 
     <div class="site-container" id="page_effect"  style="display:none;">
       <div class="site-pusher">
@@ -101,15 +101,15 @@
 
         <div class="service-header">
           <div class="header-img"></div>
-          <div class="header-text">
+          <div class="header-text advertising">
             <div style="display: flex; flex-direction: column; margin:0 25px">
             <div class="title-warp">
-              <h1>CHANNEL TRAVEL COMPANY</h1>
-              <h3>“ YOUR SECURITY WILL BE YOUR LIMIT “</h3>
+              <h1>CHANNEL MEDIA AND DIGITAL ADVERTISING</h1>
+              <h3>“ DES EXPERTS EN MARKETING WEB AU CŒUR DU NUMÉRIQUE “</h3>
             </div>
             <div class="text-warp">
-              <a class="info-wrap website btn" href="www.channeltravelcompany.com">
-                <img src="style/img/cursor-icon.svg" />www.channeltravelcompany.com
+              <a class="info-wrap website btn" href="www.channelmediadigital.com">
+                <img src="style/img/cursor-icon.svg" />www.channelmediadigital.com
               </a>
                 <a class="info-wrap call btn" href="tel:555-555-5555">
                   <img src="style/img/phone-icon.svg" />+33 6 00 00 00 00
@@ -121,41 +121,45 @@
 
             <div class="service-content">
               <div class="content-wrap">
-                <strong>CHANNEL TRAVEL COMPANY</strong> est une Agence spécialisée dans le
-transport et le tourisme à travers :<br/><br/>
-<strong>CHANNEL CAR :</strong> transport VIP de personnes proposant des trajets
-LOW-COST entre les différentes villes européennes. La société
-disposera d’une centaine de minibus qui relieront les principales villes
-européennes dans des véhicules de tourisme avec chauffeurs (VTC) de
-neuf places à partir du 1er décembre 2018<br/><br/>
-<strong>CHANNEL TRANSIT :</strong> le transit maritime et aéroportuaire de
-marchandise en provenance du monde entier vers l’Afrique ou de
-l’Afrique vers le monde entier.<br/><br/>
-<strong>CHANNEL CARPOOLING :</strong> sera une plateforme communautaire de
-covoiturage qui mettra en relation des conducteurs et des passagers
-souhaitant partager un trajet en voiture et les frais associés à leurs
-déplacements. Les conducteurs publient leurs places disponibles et les
-passagers les réservent en ligne.<br/><br/>
-<strong>CHANNEL TOURISM :</strong> pour des voyages sur mesure en Europe, aux
-Antilles, en Amérique et en Afrique…<br/><br/>
-Voyager dans ces espaces à la carte est notre spécialité. Nous savons
-que chacun de nos clients ont des exigences, des passions différentes et
-qu’il serait dommage de proposer des voyages standards pour tous !
-Raison pour laquelle nous nous sommes entourés de professionnels
-avérés dans tous les métiers du tourisme en Europe, aux Antilles, en
-Amérique et en Afrique : voyages d’affaires, voyages de noces, voyages
-en famille, etc. Flexibles et disponibles, nous saurons répondre à toutes
-vos demandes, adapter ou créer des circuits. Nos associés sont des
-professionnels, agences, Tours Opérateurs, autocaristes, sociétés de
-limousines, sociétés évènementielles, des institutionnels, mais aussi des
-palaces, conciergeries haut de gamme et des sites prestigieux... Vous
-trouverez tous ces programmes sur notre site et application web mais
+                Nous concevons et développons des sites web et mobiles adaptés à vos
+contraintes, allant de l’utilisation de simples gabarits à la création de
+designs personnalisés. L’Agence est surtout spécialisée dans le
+développement d&#39;applications web et mobiles pour les réservations de
+billets de spectacle, d’hôtel, de covoiturage, de VTC, de taxi, l’achat de
+billets d’avion, de train, de bateau, etc. Nous excellons également dans
+le graphisme, l’animation sur les réseaux sociaux, et développons une
+application web et mobile pour la vente et la distribution des produits
+alimentaires africains à travers le monde ;<br/><br/>
+<strong>CHANNEL MEDIA AND DIGITAL ADVERTISING</strong> réalise des films
+institutionnels, des films publicitaires se rapportant à la création,
+l&#39;acquisition, la vente, l&#39;édition, l&#39;exploitation et la gestion de toutes
+activités de télévision et de toutes stations de radiodiffusion sonore, et
+généralement, de tous autres moyens de communication sous toutes
+leurs formes actuelles et futures ; des captations d’évènements ainsi que
+des animations graphiques (Motion Design). Nous intervenons à chaque
+étape de la conception de votre film : conseil, scénarisation, pré
+production, tournage, montage, postproduction et encodage.<br/><br/>
+Nous organisons pour le compte de nos clients : des campagnes
+publicitaires, l’affichage publicitaire mobile, l’organisation d’événements
+publicitaires, l’organisation de campagnes d’échantillonnage, de road
+show ; exploitation, la vente d’espaces publicitaires ;<br/><br/>
+Une autre priorité est la production d’œuvres et d’évènements culturels,
+la diffusion d&#39;évènements liés aux spectacles vivants, aux artistes, aux
+médias, des prestations d&#39;accueil pour diverses entreprises ou entités, la
+communication d’entreprise ; la fabrication, la distribution, la
+commercialisation des produits dérivés d’objets promotionnels pour le
+compte de la société et ou de tous tiers, l’acquisition, la prise,
+l’exploitation ou cession de brevets concernant ces activités…<br/><br/>
+<strong>CHANNEL MEDIA AND DIGITAL ADVERTISING</strong> est constituée d’une
+équipe de collaborateurs internes et externes qui sont outillés pour vous
+offrir des services de Marketing web à travers le monde. Nous
+combinons créativité et efficacité pour maximiser la performance
+numérique de vos projets. Nos racines technologiques et notre évolution
 
-notez bien que ces circuits sont modifiables et adaptables à chacun.
-N’hésitez pas à nous faire part de vos envies. Chaque nouvelle
-demande de voyage est un défi que nous avons déjà envie de relever…<br/><br/>
-                  Pour plus d’informations : <a href="www.channeltravelcompany.com">www.channeltravelcompany.com</a>
-                <a href="" style="display: flex; justify-content: flex-end; text-decoration:none;"><div class="btn">VISITER LE SITE WEB</div></a>
+créative nous permettent d’imaginer, de concevoir et de réaliser des
+solutions numériques complètes et adaptées à vos besoins d’affaires.<br/><br/>
+                  Pour plus d’informations : <a href="www.channelmediadigital.com">www.channelmediadigital.com</a>
+                <a  href="www.channelmediadigital.com" style="display: flex; justify-content: flex-end; text-decoration: none;"><div class="btn">VISITER LE SITE WEB</div></a>
 
               </div>
             </div>
