--- a/manioc.html
+++ b/manioc.html
@@ -24,7 +24,7 @@
 </head>
 
 <body>
-  <main id="travel">
+  <main id="manioc">
 
     <div class="site-container" id="page_effect"  style="display:none;">
       <div class="site-pusher">
@@ -104,12 +104,12 @@
           <div class="header-text">
             <div style="display: flex; flex-direction: column; margin:0 25px">
             <div class="title-warp">
-              <h1>CHANNEL TRAVEL COMPANY</h1>
-              <h3>“ YOUR SECURITY WILL BE YOUR LIMIT “</h3>
+              <h1>BENYODI NDENG</h1>
+              <h3>“ VOS COURSES LIVRÉES DANS L&#39;HEURE AU PRIX CHINOIS “</h3>
             </div>
             <div class="text-warp">
-              <a class="info-wrap website btn" href="www.channeltravelcompany.com">
-                <img src="style/img/cursor-icon.svg" />www.channeltravelcompany.com
+              <a class="info-wrap website btn" href="www.allobenyodindeng.com">
+                <img src="style/img/cursor-icon.svg" />www.allobenyodindeng.com
               </a>
                 <a class="info-wrap call btn" href="tel:555-555-5555">
                   <img src="style/img/phone-icon.svg" />+33 6 00 00 00 00
@@ -121,41 +121,28 @@
 
             <div class="service-content">
               <div class="content-wrap">
-                <strong>CHANNEL TRAVEL COMPANY</strong> est une Agence spécialisée dans le
-transport et le tourisme à travers :<br/><br/>
-<strong>CHANNEL CAR :</strong> transport VIP de personnes proposant des trajets
-LOW-COST entre les différentes villes européennes. La société
-disposera d’une centaine de minibus qui relieront les principales villes
-européennes dans des véhicules de tourisme avec chauffeurs (VTC) de
-neuf places à partir du 1er décembre 2018<br/><br/>
-<strong>CHANNEL TRANSIT :</strong> le transit maritime et aéroportuaire de
-marchandise en provenance du monde entier vers l’Afrique ou de
-l’Afrique vers le monde entier.<br/><br/>
-<strong>CHANNEL CARPOOLING :</strong> sera une plateforme communautaire de
-covoiturage qui mettra en relation des conducteurs et des passagers
-souhaitant partager un trajet en voiture et les frais associés à leurs
-déplacements. Les conducteurs publient leurs places disponibles et les
-passagers les réservent en ligne.<br/><br/>
-<strong>CHANNEL TOURISM :</strong> pour des voyages sur mesure en Europe, aux
-Antilles, en Amérique et en Afrique…<br/><br/>
-Voyager dans ces espaces à la carte est notre spécialité. Nous savons
-que chacun de nos clients ont des exigences, des passions différentes et
-qu’il serait dommage de proposer des voyages standards pour tous !
-Raison pour laquelle nous nous sommes entourés de professionnels
-avérés dans tous les métiers du tourisme en Europe, aux Antilles, en
-Amérique et en Afrique : voyages d’affaires, voyages de noces, voyages
-en famille, etc. Flexibles et disponibles, nous saurons répondre à toutes
-vos demandes, adapter ou créer des circuits. Nos associés sont des
-professionnels, agences, Tours Opérateurs, autocaristes, sociétés de
-limousines, sociétés évènementielles, des institutionnels, mais aussi des
-palaces, conciergeries haut de gamme et des sites prestigieux... Vous
-trouverez tous ces programmes sur notre site et application web mais
-
-notez bien que ces circuits sont modifiables et adaptables à chacun.
-N’hésitez pas à nous faire part de vos envies. Chaque nouvelle
-demande de voyage est un défi que nous avons déjà envie de relever…<br/><br/>
-                  Pour plus d’informations : <a href="www.channeltravelcompany.com">www.channeltravelcompany.com</a>
-                <a href="" style="display: flex; justify-content: flex-end; text-decoration:none;"><div class="btn">VISITER LE SITE WEB</div></a>
+                Cybermarché français basé à Paris avec des succursales dans toutes
+                les grandes capitales européennes. Il s’agit de la distribution spécialisée
+                de produits agroalimentaires en général et du bâton de manioc en
+                particulier élaborés auprès des ressortissants de l’Afrique centrale
+                (Cameroun, Congo, Gabon, Centrafrique).<br/><br/>
+                Nous livrons, en gros et en détail dans toutes les villes en Europe y
+                compris la Russie et la Grande-Bretagne :<br/><br/>
+                Du bâton de manioc sous ses trois formes (Ndeng ou Bobolo, Miondo et
+                Chikwangue).<br/><br/>
+                Vous êtes occupés et recherchez quelqu’un pour faire vos courses, à
+                travers notre collaboration avec des centaines de magasins exotiques en
+                Europe, nous faisons vos courses et vous livrons à domicile dans
+                n’importe quelle ville Européenne !<br/><br/>
+                Le cybermarché BENYODI NDENG propose également de faire toutes
+                vos courses pour les besoins de produits exotiques d’origines Africaines
+                et Chinoises à votre place. Une fois la liste de courses validée, nous
+                envoyons un livreur dans les magasins partenaires et la livraison
+                commence une heure après votre commande. Un modèle
+                particulièrement adapté aux grandes villes et petites villes européennes.
+                Même dans les petits villages !<br/><br/>
+                  Pour plus d’informations : <a href="www.allobenyodindeng.com">www.allobenyodindeng.com</a>
+                <a href="www.allobenyodindeng.com" style="display: flex; justify-content: flex-end; text-decoration:none;"><div class="btn">VISITER LE SITE WEB</div></a>
 
               </div>
             </div>
