--- a/viceversa.html
+++ b/viceversa.html
@@ -24,7 +24,7 @@
 </head>
 
 <body>
-  <main id="travel">
+  <main id="viceversa">
 
     <div class="site-container" id="page_effect"  style="display:none;">
       <div class="site-pusher">
@@ -101,15 +101,15 @@
 
         <div class="service-header">
           <div class="header-img"></div>
-          <div class="header-text">
+          <div class="header-text viceversa">
             <div style="display: flex; flex-direction: column; margin:0 25px">
             <div class="title-warp">
-              <h1>CHANNEL TRAVEL COMPANY</h1>
-              <h3>“ YOUR SECURITY WILL BE YOUR LIMIT “</h3>
+              <h1>VICE-VERSA</h1>
+              <h3>“ FRANCOPHONIE ET DIVERSITÉ CULTURELLE “</h3>
             </div>
             <div class="text-warp">
-              <a class="info-wrap website btn" href="www.channeltravelcompany.com">
-                <img src="style/img/cursor-icon.svg" />www.channeltravelcompany.com
+              <a class="info-wrap website btn" href="www.viceversaweb.com">
+                <img src="style/img/cursor-icon.svg" />www.viceversaweb.com
               </a>
                 <a class="info-wrap call btn" href="tel:555-555-5555">
                   <img src="style/img/phone-icon.svg" />+33 6 00 00 00 00
@@ -121,41 +121,102 @@
 
             <div class="service-content">
               <div class="content-wrap">
-                <strong>CHANNEL TRAVEL COMPANY</strong> est une Agence spécialisée dans le
-transport et le tourisme à travers :<br/><br/>
-<strong>CHANNEL CAR :</strong> transport VIP de personnes proposant des trajets
-LOW-COST entre les différentes villes européennes. La société
-disposera d’une centaine de minibus qui relieront les principales villes
-européennes dans des véhicules de tourisme avec chauffeurs (VTC) de
-neuf places à partir du 1er décembre 2018<br/><br/>
-<strong>CHANNEL TRANSIT :</strong> le transit maritime et aéroportuaire de
-marchandise en provenance du monde entier vers l’Afrique ou de
-l’Afrique vers le monde entier.<br/><br/>
-<strong>CHANNEL CARPOOLING :</strong> sera une plateforme communautaire de
-covoiturage qui mettra en relation des conducteurs et des passagers
-souhaitant partager un trajet en voiture et les frais associés à leurs
-déplacements. Les conducteurs publient leurs places disponibles et les
-passagers les réservent en ligne.<br/><br/>
-<strong>CHANNEL TOURISM :</strong> pour des voyages sur mesure en Europe, aux
-Antilles, en Amérique et en Afrique…<br/><br/>
-Voyager dans ces espaces à la carte est notre spécialité. Nous savons
-que chacun de nos clients ont des exigences, des passions différentes et
-qu’il serait dommage de proposer des voyages standards pour tous !
-Raison pour laquelle nous nous sommes entourés de professionnels
-avérés dans tous les métiers du tourisme en Europe, aux Antilles, en
-Amérique et en Afrique : voyages d’affaires, voyages de noces, voyages
-en famille, etc. Flexibles et disponibles, nous saurons répondre à toutes
-vos demandes, adapter ou créer des circuits. Nos associés sont des
-professionnels, agences, Tours Opérateurs, autocaristes, sociétés de
-limousines, sociétés évènementielles, des institutionnels, mais aussi des
-palaces, conciergeries haut de gamme et des sites prestigieux... Vous
-trouverez tous ces programmes sur notre site et application web mais
+                VICE-VERSA est une chaîne de télévision française dédiée à la
+Francophonie et à sa diversité culturelle. Créée sous la forme papier au
+Cameroun en 2003, une vingtaine de numéros bimestriels seront publiés
+jusqu’en 2009 date de l’exil forcé de son Fondateur en France.<br/><br/>
+CONTEXTE ET JUSTIFICATION<br/>
+C&#39;est bien connu, qui veut gagner une guerre contrôle l&#39;information. Nous
+savons depuis les travaux de Noam Chomsky que ceux qui contrôlent
+les médias déterminent la perception des évènements. C&#39;est grâce à un
+traitement particulier de l&#39;information que la mainmise sur les matières
+premières des pays africains a été pendant des décennies perçue
+comme une aide au développement, que le Franc CFA a été assimilé à
+un soutien à la monnaie et qu’une opération de déstabilisation par
+l&#39;intermédiaire des sectes islamistes comme Boko Haram, DAESH ou Al-
+Qaïda fut comprise comme une manifestation de simples ambitions
+territoriales de radicaux islamistes.<br/><br/>
+Chaque grande puissance fait donc de la propagande à l’endroit des
+autres nations compétitrices en général et aux pays de l’Afrique
+francophone en particulier sur la perception des évènements sociaux,
+politiques ou financiers, régionaux et mondiaux qui lui sont favorable. La
+Grande-Bretagne a sa BBC, la France a sa FMM, les États-Unis ont La
+Voix de l&#39;Amérique, la Chine a l&#39;agence Xinhua et une brochette de
 
-notez bien que ces circuits sont modifiables et adaptables à chacun.
-N’hésitez pas à nous faire part de vos envies. Chaque nouvelle
-demande de voyage est un défi que nous avons déjà envie de relever…<br/><br/>
-                  Pour plus d’informations : <a href="www.channeltravelcompany.com">www.channeltravelcompany.com</a>
-                <a href="" style="display: flex; justify-content: flex-end; text-decoration:none;"><div class="btn">VISITER LE SITE WEB</div></a>
+chaînes de télévision, la Russie a la Voix de la Russie, l&#39;Allemagne a la
+Deutschwelle, etc.<br/><br/>
+En Afrique francophone, les médias étrangers utilisent de plus en plus
+des journalistes locaux, un peu comme un boulanger grec emploierait
+des vendeuses noires pour inspirer confiance et établir une connexion
+émotionnelle avec ses clients. L&#39;information semble mieux passer
+lorsqu&#39;elle vient d&#39;une personne qui nous ressemble. Après tout, c&#39;est le
+frère et il ne peut qu&#39;être objectif puisqu&#39;il est supposé aimer son pays,
+ce qui n&#39;est malheureusement pas toujours le cas. Les Africains ne
+peuvent et ne doivent pas laisser un domaine aussi stratégique
+uniquement entre les mains de l’étranger.<br/><br/>
+La justification de cette télévision, qui est en fait un projet bien mûri,
+repose sur l’analyse de la manière dont l’information concernant l’Afrique
+en général et l’Afrique francophone en particulier est traitée tant dans les
+médias occidentaux que dans les médias africains. Ensuite, notre
+approche est de proposer en contrepoint, un traitement de l’information
+afro-centré qui, loin de tout stéréotype réducteur, vise à fournir d’abord à
+l’Afrique francophone mais aussi au monde, une information de qualité
+centrée sur les besoins et les préoccupations des Africains et qui reflète
+leur point de vue sur les évènements.<br/><br/>
+Cette démarche critique amorcée dans les années 1990 a pris forme
+avec l’explosion des médias audiovisuels privés africains dont nombre
+d’animateurs et journalistes faisaient du copier-coller des émissions
+qu’ils étaient habitués à écouter et à voir sur des chaînes de l’hégémonie
+étrangère comme RFI, TV5, Africa N°1, etc. VICE-VERSA se fixe pour
+objectif de renverser la vapeur, en prenant pour prétexte des
+événements et des faits divers pour traiter des sujets forts, en utilisant
+des professionnels qui y travaillent dans tous les pays membres de
+l’Organisation Internationale de la Francophonie (OIF) pour effectuer des
+reportages et alimenter les émissions consacrées à la promotion de la
+Francophonie et sa diversité culturelle ainsi que la restitution de la vérité
+sur des évènements majeurs qui ont marqué le monde dans le passé et
+aider au développement des pays membres de l’OIF.<br/><br/>
+La francophonie, également appelé monde francophone ou encore
+espace francophone désigne l&#39;ensemble des personnes et des
+institutions qui utilisent le français comme langue de première
+socialisation, langue d&#39;usage, langue administrative, langue
+d&#39;enseignement ou langue choisie. La francophonie peut renvoyer tant à
+
+l&#39;ensemble des pays francophones qu&#39;à l&#39;ensemble des pays ou régions
+membres de l&#39;Organisation internationale de la Francophonie (OIF)
+(notamment représentés par l&#39;Association internationale des régions
+francophones (AIRF). Ces pays parlent majoritairement ou partiellement
+français mais le français n&#39;est pas obligatoirement la langue officielle
+nationalement ou régionalement.<br/><br/>
+Selon l&#39;OIF, en 2014, le français est la cinquième langue la plus parlée
+au monde avec 274 millions de locuteurs représentant 4 % de la
+population mondiale (une personne sur 26), dont 212 millions en faisant
+un usage quotidien (+ 7 % entre 2010 et 2014) représentant 3 % de la
+population mondiale (une personne sur 32). Estimé à 284 millions en
+2015, le nombre de francophones approchera les 700 millions en 2050
+soit 8 % de la population mondiale (1 personne sur 12), et 85 % de ces
+francophones seront en Afrique du fait de la croissance démographique.<br/><br/>
+BUT<br/>
+A l’ère du capital cognitif, instruire et divertir en rétablissant la vérité,
+délivrer une information vraie, qui serve de base à l’intelligence
+économique est un impératif. L’intelligence économique renvoie à un
+ensemble d’actions coordonnées de recherche, de collecte, de
+traitement et de distribution de l&#39;information en vue de son exploitation
+par les capitaines d&#39;industries pour la réussite de leurs missions.
+L&#39;information est l&#39;arme à maîtriser pour gagner la guerre de l&#39;opinion,
+car gagner la guerre de la représentation, c&#39;est aussi gagner la guerre
+des marchés. Qu&#39;il s&#39;agisse de l&#39;information, traitée et diffusée via des
+médias internationaux ou encore de celle disponible çà et là, qu&#39;il faut
+collecter, traiter, explorer car elle donne accès au savoir. C’est la course
+à la matière grise, où seuls ceux qui investissent dans l&#39;innovation
+l’emportent.<br/><br/>
+
+OBJECTIFS STRATEGIQUES<br/>
+Délivrer une information vérifiée, innovante et économiquement utile,
+pour donner de l’Afrique francophone une image positive, tel est l’objectif
+poursuivi par VICE-VERSA.<br/><br/>
+                  Pour plus d’informations : <a href="www.viceversaweb.com">www.viceversaweb.com</a>
+                <a  href="www.viceversaweb.com" style="display: flex; justify-content: flex-end; text-decoration: none;"><div class="btn">VISITER LE SITE WEB</div></a>
 
               </div>
             </div>
