--- a/advertising.html
+++ b/advertising.html
@@ -39,7 +39,7 @@
             <a href="advertising.html" class="nav-section nav-advertising">
               <div class="nav-section-wrap">
               <div class="text">CHANNEL MEDIA AND DIGITAL ADVERTISING</div>
-              <div class="subtext">Communication Digitale</div>
+              <div class="subtext">Communication digitale</div>
             </div>
 
               <div class="line"></div>
@@ -47,7 +47,7 @@
             <a href="viceversa.html" class="nav-section nav-viceversa">
               <div class="nav-section-wrap">
               <div class="text">VICE-VERSA</div>
-              <div class="subtext">Television</div>
+              <div class="subtext">Télévision</div>
             </div>
 
               <div class="line"></div>
@@ -55,7 +55,7 @@
             <a href="travel.html" class="nav-section nav-travel">
               <div class="nav-section-wrap">
               <div class="text">CHANNEL TRAVEL COMPANY</div>
-              <div class="subtext">Transport et Tourisme</div>
+              <div class="subtext">Transport et tourisme</div>
             </div>
               <div class="line"></div>
             </a>
@@ -64,7 +64,7 @@
             <a href="manioc.html" class="nav-section nav-manioc">
               <div class="nav-section-wrap">
               <div class="text">BENYODI NDENG</div>
-              <div class="subtext">Distribution Agroalimentaire</div>
+              <div class="subtext">Distribution agroalimentaire</div>
             </div>
               <div class="line"></div>
             </a>
@@ -82,18 +82,9 @@
 
           <div class="nav-languages desktop-flex" id="navLanguages">
             <img src="style/img/fr-flag.svg">
-            <img class="arrow" src="style/img/arrow-icon.svg">
+            <img src="style/img/en-flag.svg">
           </div>
-            <div class="lang-dropdown" id="langDropdown" style="display:none;">
-              <div class="lang-dropdown-wrap">
-                <img src="style/img/fr-flag.svg">
-                <div>Français</div>
-              </div>
-              <div class="lang-dropdown-wrap">
-                <img src="style/img/en-flag.svg">
-                <div>English</div>
-              </div>
-            </div>
+
             <a href="http://channelgroupinternational.com" class="nav-logo mobile-flex">
             <img src="style/img/logo/logo2.jpg"/>
           </a>
